# wlr-synergy-client

./: .gitignore  .gitmodules  Makefile  README.md  keymap.h  meson.build  wlr-synergy-client.c
protocol/: meson.build
